cabal-version:      2.4
name:               adventofcode2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Rioux
maintainer:         jonathan@raiks.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  build-depends:       base ^>= 4.16.3.0, raw-strings-qq, split, containers, text, lens
  extensions: OverloadedStrings, TemplateHaskell

  -- ghc-options:         -Wall
  --                      -Wcompat
  --                      -Widentities
  --                      -Wincomplete-uni-patterns
  --                      -Wincomplete-record-updates
  -- if impl(ghc >= 8.0)
  --   ghc-options:       -Wredundant-constraints
  -- if impl(ghc >= 8.2)
  --   ghc-options:       -fhide-source-paths
  -- if impl(ghc >= 8.4)
  --   ghc-options:       -Wmissing-export-lists
  --                      -Wpartial-fields

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src

executable adventofcode2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
